src/test/ui/kindck/kindck-copy.stderr
error[E0277]: the trait bound `&'static mut isize: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:27:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<&'static mut isize>();
   |                   ^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&'static mut isize`
   |
   = help: the following implementations were found:
             <isize as Copy>

error[E0277]: the trait bound `&'a mut isize: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:28:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<&'a mut isize>();
   |                   ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&'a mut isize`
   |
   = help: the following implementations were found:
             <isize as Copy>

error[E0277]: the trait bound `Box<isize>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:31:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Box<isize>>();
   |                   ^^^^^^^^^^ the trait `Copy` is not implemented for `Box<isize>`

error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:32:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<String>();
   |                   ^^^^^^ the trait `Copy` is not implemented for `String`

error[E0277]: the trait bound `Vec<isize>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:33:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Vec<isize> >();
   |                   ^^^^^^^^^^ the trait `Copy` is not implemented for `Vec<isize>`

error[E0277]: the trait bound `Box<&'a mut isize>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:34:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Box<&'a mut isize>>();
   |                   ^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<&'a mut isize>`

error[E0277]: the trait bound `Box<dyn Dummy>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:42:5
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Box<dyn Dummy>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<dyn Dummy>`

error[E0277]: the trait bound `Box<dyn Dummy + Send>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:43:5
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Box<dyn Dummy + Send>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Box<dyn Dummy + Send>`

error[E0277]: the trait bound `&'a mut (dyn Dummy + Send + 'a): Copy` is not satisfied
  --> $DIR/kindck-copy.rs:46:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<&'a mut (dyn Dummy + Send)>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `&'a mut (dyn Dummy + Send + 'a)`

error[E0277]: the trait bound `MyNoncopyStruct: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:64:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<MyNoncopyStruct>();
   |                   ^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `MyNoncopyStruct`

error[E0277]: the trait bound `Rc<isize>: Copy` is not satisfied
  --> $DIR/kindck-copy.rs:67:19
   |
LL | fn assert_copy<T:Copy>() { }
   |                  ---- required by this bound in `assert_copy`
...
LL |     assert_copy::<Rc<isize>>();
   |                   ^^^^^^^^^ the trait `Copy` is not implemented for `Rc<isize>`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0277`.
